# chatProgram

./: .gitignore  .gitmodules  chat.pro  global.h  httpmanager.cpp  httpmanager.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  rc.qrc  registerdialog.cpp  registerdialog.ui  singleton.h
client/: chat.pro  global.cpp  global.h  httpmanager.cpp  httpmanager.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rc.qrc  registerdialog.cpp  registerdialog.h  registerdialog.ui  resetdialog.cpp  resetdialog.h  resetdialog.ui  singleton.h
client/register_ui/: checklineedit.cpp  checklineedit.h  passwordlineedit.cpp  passwordlineedit.h  validatedlineedit.cpp  validatedlineedit.h  verificationcodeedit.cpp  verificationcodeedit.h  waitingspinnerwidget.cpp  waitingspinnerwidget.h
client/style/: login.qss  msgbox.qss  register.qss  reset.qss  stylesheet.qss
notes/: day01-GUI设计.md  day02-界面连接和qss样式切换.md  day03-单例模板和HTTP管理类设计.md  day04-win10上的boost和jsoncpp环境配置.md  day05-简单http服务器实现.md  day06-http_get_post实现.md  day07-ide迁移+grpc配置.md  day08-nodejs验证码服务器+多线程io_context.md  day09-redis配置.md  day10-mysql配置和注册逻辑完善.md
server/: CMakeLists.txt  config.json
server/cmake/: third_party.cmake
server/example/redis_tests/: redis_test.cpp
server/example/variadic_templates/: variadic.cpp
server/src/: CMakeLists.txt  config.ini  main.cpp
server/src/common/: CMakeLists.txt  constant.h  dummy.cpp  singleton.h
server/src/database/: CMakeLists.txt  mysql_dao.cpp  mysql_dao.h  mysql_manager.cpp  mysql_manager.h  redis_manager.cpp  redis_manager.h
server/src/gateserver/: CMakeLists.txt  config.cpp  config.h  cserver.cpp  httpconnection.cpp  httpconnection.h  logic_system.cpp  logic_system.h  main.cpp
server/src/header/: asio_iocontext_pool.h  config.h  config_manager.h  constant.h  cserver.h  defer.h  httpconnection.h  logic_system.h  message.pb.h  mysql_manager.h  redis_manager.h  singleton.h  verify_grpc_client.h
server/src/net/: CMakeLists.txt  asio_iocontext_pool.cpp  asio_iocontext_pool.h
server/src/rpc/: CMakeLists.txt  message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  verify_grpc_client.cpp  verify_grpc_client.h
server/src/source/: asio_iocontext_pool.cpp  config.cpp  config_manager.cpp  cserver.cpp  httpconnection.cpp  logic_system.cpp  message.grpc.pb.cc  message.pb.cc  mysql_dao.cpp  mysql_manager.cpp  redis_manager.cpp  verify_grpc_client.cpp
server/src/utils/: CMakeLists.txt  defer.cpp  defer.h
style/: stylesheet.qss
verify_server/: config.json  const.js  email.js  package-lock.json  package.json  proto.js  redis.js  server.js
